--- a/index.html
+++ b/index.html
@@ -125,6 +125,36 @@
               <div class="team-content">
                 <h3 class="team-names">Игорь Демьяненко</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -136,6 +166,36 @@
               <div class="team-content">
                 <h3 class="team-names">Ольга Репина</h3>
                 <p class="team-position">Frontend Developer</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -147,6 +207,36 @@
               <div class="team-content">
                 <h3 class="team-names">Николай Тарасов</h3>
                 <p class="team-position">Marketing</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -158,7 +248,86 @@
               <div class="team-content">
                 <h3 class="team-names">Михаил Ермаков</h3>
                 <p class="team-position">UI Designer</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-item">
+                    <a href="" class="team-socials-link">
+                      <svg class="team-socials-icon" width="20" height="20">
+                        <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="customers section">
+        <div class="container">
+          <h2 class="customers-title">Постоянные клиенты</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-Logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-Logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-Logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
