--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,20 @@
         </nav>
         <ul class="header-contacts list">
           <li class="header-contacts-mail">
-            <a class="nav-auth-link link mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com"</a
+            <a class="nav-auth-link link" href="mailto:info@devstudio.com">
+              <svg class="nav-icon" width="16" height="12">
+                <use href="./images/icons-svg/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="header-contacts-mail">
-            <a class="nav-auth-link link tel" href="tel:++380961111111">+380961111111"</a>
+            <a class="nav-auth-link link" href="tel:++380961111111">
+              <svg class="nav-icon" width="10" height="16">
+                <use href="./images/icons-svg/symbol-defs.svg#icon-tel"></use>
+              </svg>
+              +380961111111</a
+            >
           </li>
         </ul>
       </div>
@@ -56,94 +64,151 @@
           </ul>
           <ul class="projects list">
             <li class="project-item">
-              <img src="./images/портфолио/img1.jpg" alt="Технокряк" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Технокряк</h2>
-                <p class="project-text">Веб-сайт</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img1.jpg" alt="Технокряк" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img
-                src="./images/портфолио/img2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-                width="370"
-              />
-              <div class="project-content">
-                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                <p class="project-text">Дизайн</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img
+                  src="./images/портфолио/img2.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                />
+                <div class="project-content">
+                  <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img3.jpg" alt="Ресторан Seafood" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Ресторан Seafood</h2>
-                <p class="project-text">Приложение</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img3.jpg" alt="Ресторан Seafood" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <p class="project-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img4.jpg" alt="Проект Prime" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Проект Prime</h2>
-                <p class="project-text">Маркетинг</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img4.jpg" alt="Проект Prime" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Проект Prime</h2>
+                  <p class="project-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img5.jpg" alt="Проект Boxes" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Проект Boxes</h2>
-                <p class="project-text">Приложение</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img5.jpg" alt="Проект Boxes" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Проект Boxes</h2>
+                  <p class="project-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img6.jpg" alt="Inspiration has no Borders" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Inspiration has no Borders</h2>
-                <p class="project-text">Веб-сайт</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img
+                  src="./images/портфолио/img6.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
+                <div class="project-content">
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img7.jpg" alt="Издание Limited Edition" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Издание Limited Edition</h2>
-                <p class="project-text">Дизайн</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img7.jpg" alt="Издание Limited Edition" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Издание Limited Edition</h2>
+                  <p class="project-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img8.jpg" alt="Проект LAB" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Проект LAB</h2>
-                <p class="project-text">Маркетинг</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img8.jpg" alt="Проект LAB" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Проект LAB</h2>
+                  <p class="project-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="project-item">
-              <img src="./images/портфолио/img9.jpg" alt="Growing Business" width="370" />
-              <div class="project-content">
-                <h2 class="project-title">Growing Business</h2>
-                <p class="project-text">Приложение</p>
-              </div>
+              <a class="project-item-link" href="">
+                <img src="./images/портфолио/img9.jpg" alt="Growing Business" width="370" />
+                <div class="project-content">
+                  <h2 class="project-title">Growing Business</h2>
+                  <p class="project-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="" class="footer-logo logo"><span class="accent">Web</span>Studio</a>
-        <address class="address">
-          <ul class="list">
-            <li class="footer-item">
-              <a class="footer-address link" href="https://goo.gl/maps/13D3cSfwj88NWSxH7"
-                >г.Киев,пр-т Леси Украинки,26</a
-              >
+      <div class="container footer-wrap">
+        <div class="footer-address-cont">
+          <a href="" class="footer-logo logo"><span class="accent">Web</span>Studio</a>
+          <address class="address">
+            <ul class="list">
+              <li class="footer-item">
+                <a class="footer-address link" href="https://goo.gl/maps/13D3cSfwj88NWSxH7"
+                  >г.Киев,пр-т Леси Украинки,26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="mailto:info@example.com">info@example.com"</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="tel:+380991111111">+380991111111"</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-text">присоединяйтесь</p>
+          <ul class="footer-socials-list list">
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="20" height="20">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-link link" href="mailto:info@example.com">info@example.com"</a>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="20" height="20">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-link link" href="tel:+380991111111">+380991111111"</a>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="20" height="20">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link">
+                <svg class="footer-socials-icon" width="20" height="20">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
